# JobApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_job_sources_boilerplate.py  0003_profile_and_analysis.py  0004_reopened_at.py  0005_market_check.py  0006_digest_presets.py
backend/app/: config.py  db.py  logging.py  main.py
backend/app/analysis/: fit.py  market_check.py
backend/app/api/: deps.py
backend/app/api/routes/: companies.py  digests.py  discover.py  jobs.py  profile.py  sources.py
backend/app/deduplication/: dedupe.py
backend/app/digest/: service.py
backend/app/discovery/: candidate_extraction.py  source_detection.py
backend/app/domain/: models.py  schemas.py
backend/app/normalization/: content_hash.py  text.py
backend/app/providers/: base.py  registry.py
backend/app/providers/ashby/: client.py  provider.py
backend/app/providers/bamboohr/: client.py  provider.py
backend/app/providers/breezyhr/: client.py  provider.py
backend/app/providers/greenhouse/: client.py  provider.py
backend/app/providers/lever/: client.py  provider.py
backend/app/providers/smartrecruiters/: client.py  provider.py
backend/app/providers/workable/: client.py  provider.py
backend/app/providers/workday/: client.py  provider.py
backend/app/scheduling/: discover_task.py  scheduler.py
backend/app/sync/: sync_service.py
docs/: ARCHITECTURE.md  PRODUCT_SPEC.md
frontend/: package-lock.json  package.json  (+1 more)
(+28 files in other folders)
