[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-intelligence-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["app*"]
